# Woxi

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .sprite  AGENTS.md  Cargo.toml  Dockerfile  MISSING_FEATURES.md  _error_2026-06-26t1732-symiro-Implement_equations_1_to_28_of.json  all_mathics_tests.txt  build.rs  changelog.md  cli.test  cmd-server.js  done.txt  extract_cells.md  factorials  flake.nix  functions.csv  graphics.wsl  improve-compile-time.md  issues.md  makefile  readme.md  scripts-todo.md  todos.md  todos.txt
.cargo/: config.toml
.claude/: settings.local.json
.config/: nextest.toml
.github/workflows/: nightly.yml  publish-book.yml  publish-pypi.yml  rust.yml
benches/: interpreter.rs
docs/: TableForm-examples.md
entity_types/: planet.wls
examples/: data-analysis.wls  notebook.ipynb
examples/data-analysis/: data-analysis.wls
files/: showcase.ipynb
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: interpret.rs  parse.rs
jupyterlite-woxi-kernel/: .gitignore  install.json  package-lock.json  package.json  pyproject.toml  tsconfig.json
jupyterlite-woxi-kernel/jupyterlite_woxi_kernel/: __init__.py
jupyterlite-woxi-kernel/src/: index.ts  kernel.ts
jupyterlite-woxi-kernel/style/: base.css
kernelspec/woxi/: kernel.json
npm/: .gitignore  cli.js  index.d.ts  index.js  package.json  readme.md  test.js
scripts/: basic_examples.wls  box_language.wls  build_summary.py  build_summary.wls  compare_output.sh  create_collage.wls  export_pdf.wls  gen_geo_data.wls  rebuild_index.py  split_function_docs.py
src/: evaluator.rs  expr_list.rs  jupyter.rs  lib.rs  main.rs  notebook.rs  repl.rs  syntax.rs  utils.rs  wasm.rs  wolfram.pest
src/evaluator/: assignment.rs  attributes.rs  binary_ops.rs  core_eval.rs  dispatch.rs  function_application.rs  listable.rs  mod.rs  part_extraction.rs  pattern_functions.rs  pattern_matching.rs  scoping.rs  string_replace.rs  type_helpers.rs
src/evaluator/dispatch/: arg_count.rs  (+24 more)
src/functions/: assessment_ast.rs  assessment_render.rs  association.rs  association_ast.rs  astronomy_ast.rs  boolean.rs  boolean_ast.rs  calculus.rs  calculus_ast.rs  cellular_automaton_ast.rs  chart.rs  control_flow_ast.rs  convex_hull.rs  convolve_ast.rs  count_roots_ast.rs  country_data.rs  csv_ast.rs  dataset_ast.rs  date.rs  datetime_ast.rs  dendrogram.rs  dirichlet_ast.rs  element_data.rs  entity_ast.rs  expr_form.rs  field_plot.rs  function_range_ast.rs  geo_math.rs  geographics.rs  geometric_test_ast.rs  graph.rs  graphics.rs  graphicsbox.rs  groebner_ast.rs  http_ast.rs  image_ast.rs  information_render.rs  interval_ast.rs  io.rs  linear_algebra_ast.rs  (+52 more)
tests/: SUMMARY.md  book.toml  cli_tests.rs  high_level_functions_tests.rs  interpreter_tests.rs  list_tests.rs  miscellaneous_tests.rs  parser_tests.rs  precision_display_tests.rs  script_snapshot_tests.rs  svg_rendering_tests.rs  wikidata_tests.rs  zensical.toml
tests/cli/: ListPlay.md  SUMMARY.md  associations.md  associations.test  astronomy.md  basic.test  basics.md  basics.test  boolean.md  boolean.test  comparison.md  custom.css  data.md  dates.md  effect_levels.md  expressions.md  file_system.md  functions.md  functions.test  geometry.md  hello_world.wls  higher_order_functions.test  images.md  index.md  introduction.md  jupyter.md  jupyterlite-showcase.html  list_operations.md  list_operations.test  math.md  math.test  module.md  music.md  plotting.md  python.md  quantity.md  related.md  replacement_rules.md  replacement_rules.test  resources.md  (+9 more)
tests/data/: article.txt  data.csv  population.xlsx  sample.json  sample.root  sample_lz4.root  tree_data.root
tests/interpreter_tests/: algebra.rs  arg_count.rs  arithmetic.rs  assessment.rs  association.rs  astronomy.rs  attributes.rs  audio.rs  batch_wrappers.rs  calculus.rs  case_helpers.rs  cellular_automaton.rs  column.rs  control_flow.rs  dataset.rs  datetime.rs  distributions.rs  element_data.rs  entity.rs  function_application.rs  function_definitions.rs  functions.rs  geometry.rs  graph_theory.rs  graphics.rs  image.rs  interval.rs  io.rs  large_number_and_memoization.rs  linear_algebra.rs  list.rs  machine_specific.rs  math.rs  molecule.rs  music.rs  patterns.rs  polyhedron_data.rs  property.rs  quantity.rs  rosetta_script_fixes.rs  (+11 more)
tests/landing/: index.html  script.js  style.css  worker.js
tests/miscellaneous_tests/: high_level_functions.rs  list.rs  parser.rs  precision_display.rs  svg_rendering.rs  wikidata.rs
tests/notebooks/: Example-Analyze-Sales-Data-by-Region-1-0-0-examples.nb  hello_world.nb  layout_typography.nb  syntax.nb
tests/playground/: index.html  script.js  style.css  worker.js
tests/playground-deps/: entry.mjs  package-lock.json  package.json
tests/scripts/: 24_game_solve.wls  99_bottles_of_beer.wls  9_billion_names_of_god_the_integer.wls  _print_random_words.wls  a_b.wls  abc_problem.wls  ackermann_function.wls  align_columns.wls  aliquot_sequence_classifications.wls  amb.wls  anonymous_recursion.wls  apply_a_callback_to_an_array.wls  arithmetic_complex.wls  arithmetic_evaluation.wls  arithmetic_integer.wls  arithmetic_rational.wls  array_concatenation.wls  array_length.wls  arrays.wls  assigning_values_to_an_array.wls  associative_array_iteration.wls  atomic_updates.wls  average_loop_length.wls  averages_arithmetic_mean.wls  averages_median.wls  averages_mode.wls  averages_root_mean_square.wls  averages_simple_moving_average.wls  babbage_problem.wls  balanced_ternary.wls  bernoulli_numbers.wls  best_shuffle.wls  binary_digits.wls  binary_search.wls  binary_strings.wls  bitmap.wls  bitmap_bezier_curves_quadratic.wls  bitmap_write_a_ppm_file.wls  bitwise_operations.wls  calculating_the_value_of_e.wls  (+297 more)
woxi-py/: .gitignore  Cargo.toml  pyproject.toml  readme.md
woxi-py/python/woxi/: __init__.py  __main__.py  _woxi.pyi
woxi-py/src/: lib.rs
woxi-py/tests/: test_woxi.py
woxi-studio/: Cargo.toml
woxi-studio/examples/: test_notebook.rs
woxi-studio/macos/: Info.plist
woxi-studio/src/: cell_type_dropdown.rs  highlighter.rs  macos_open.rs  main.rs  manipulate.rs  notebook.rs
(+2250 files in other folders)
