[package]
name = "woxi"
description = "Interpreter for a subset of the Wolfram Language"
keywords = ["wolfram", "wolfram-language", "mathematica", "cas", "math"]
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"
repository = "https://github.com/ad-si/Woxi"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["cli"]
cli = [
  "dep:chrono",
  "dep:clap",
  "dep:dirs",
  "dep:jupyter-protocol",
  "dep:runtimelib",
  "dep:tokio",
  "dep:uuid",
  "dep:zeromq",
]
wasm = ["dep:wasm-bindgen", "dep:getrandom"]

[dependencies]
anyhow = "1.0.98"
chrono = { version = "0.4", optional = true }
clap = { version = "4.3", features = ["derive"], optional = true }
dirs = { version = "6.0.0", optional = true }
getrandom = { version = "0.2", features = ["js"], optional = true }
jupyter-protocol = { git = "https://github.com/runtimed/runtimed", optional = true }
astro-float = "0.9"
num-bigint = "0.4.6"
num-traits = "0.2.19"
pest = "2.5"
pest_derive = "2.5"
rand = "0.8"
runtimelib = { git = "https://github.com/runtimed/runtimed", features = ["tokio-runtime"], optional = true }
serde_json = "1.0"
snailquote = "0.3.1"
thiserror = "1.0.63"
tokio = { version = "1.45.0", features = ["full"], optional = true }
uuid = { version = "1.16.0", features = ["v4"], optional = true }
wasm-bindgen = { version = "0.2", optional = true }
zeromq = { version = "0.5.0-pre", features = ["tokio-runtime"], default-features = false, optional = true }

[dev-dependencies]
insta = { version = "1", features = ["glob"] }
