[workspace]
members = [".", "woxi-studio"]
resolver = "3"

[package]
name = "woxi"
description = "Interpreter for a subset of the Wolfram Language"
keywords = ["wolfram", "wolfram-language", "mathematica", "cas", "math"]
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"
repository = "https://github.com/ad-si/Woxi"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["cli"]
cli = [
  "dep:chrono",
  "dep:clap",
  "dep:dirs",
  "dep:env_logger",
  "dep:jupyter-protocol",
  "dep:log",
  "dep:runtimelib",
  "dep:tokio",
  "dep:uuid",
  "dep:zeromq",
]
wasm = ["dep:wasm-bindgen", "dep:getrandom", "dep:console_error_panic_hook"]

[dependencies]
anyhow = "1.0.98"
chrono = { version = "0.4", optional = true }
clap = { version = "4.3", features = ["derive"], optional = true }
dirs = { version = "6.0.0", optional = true }
env_logger = { version = "0.11", optional = true }
getrandom = { version = "0.2", features = ["js"], optional = true }
log = { version = "0.4", optional = true }
jupyter-protocol = { version = "1.2", optional = true }
astro-float = "0.9"
base64 = "0.22"
flate2 = "1.0"
num-bigint = "0.4.6"
num-prime = "0.4"
plotters = { version = "0.3", default-features = false, features = ["svg_backend", "line_series"] }
num-traits = "0.2.19"
pest = "2.5"
pest_derive = "2.5"
rand = "0.8"
runtimelib = { version = "1.3", features = ["tokio-runtime"], optional = true }
serde_json = "1.0"
snailquote = "0.3.1"
thiserror = "1.0.63"
tokio = { version = "1.45.0", features = ["full"], optional = true }
uuid = { version = "1.16.0", features = ["v4"], optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
zeromq = { version = "0.5.0-pre", features = ["tokio-runtime"], default-features = false, optional = true }
regex = "1.12.3"
unicode-normalization = "0.1"
sha2 = "0.10"
md-5 = "0.10"
sha1 = "0.10"
rand_distr = "0.4"
rand_chacha = "0.3"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "bmp", "tiff"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies.resvg]
version = "0.47"
default-features = false
features = ["text"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
libc = "0.2"

[dev-dependencies]
insta = { version = "1", features = ["glob"] }
