[workspace]
members = [".", "woxi-studio", "woxi-py"]
# Unscoped commands at the root (`cargo build`, `make test`, CI) build only
# the interpreter; woxi-studio (iced → wgpu/winit, 100+ extra crates) is
# built explicitly via `-p woxi-studio` / `make install-macos-app`.
default-members = ["."]
resolver = "3"
# The cargo-fuzz crate is its own workspace: it needs nightly + libFuzzer
# and must not affect the root Cargo.lock or default builds.
exclude = ["fuzz"]

[package]
name = "woxi"
description = "Interpreter for a subset of the Wolfram Language"
keywords = ["wolfram", "wolfram-language", "mathematica", "cas", "math"]
version = "0.2.0"
edition = "2024"
license = "AGPL-3.0-or-later"
repository = "https://github.com/ad-si/Woxi"
# `cargo run -- eval '…'` should run the interpreter CLI, not the
# woxi-diff-fuzz helper binary.
default-run = "woxi"
# Keep packages built from this crate (crates.io and the PyPI sdist,
# which vendors this crate via maturin) down to what's needed to
# compile it. tests/SUMMARY.md, functions.csv, and resources/ are
# embedded via include_str!/include_bytes! and must stay, as must
# benches/interpreter.rs (an explicitly declared [[bench]] target).
exclude = [
  "/tests/*/",
  "/tests/woxi",
  "/tests/zensical.toml",
  "/images",
  "/files",
  "/datasets",
  "/examples",
  "/entity_types",
  "/jupyterlite-woxi-kernel",
  "/kernelspec",
  "/scripts",
  "/woxi-studio",
  "/woxi-py",
  "/npm",
  "/fuzz",
  "/.claude",
  "/.vscode",
  "/.github",
  "/.sprite",
  "/Dockerfile",
  "/flake.nix",
  "/flake.lock",
]

# Differential fuzzer comparing woxi against wolframscript
# (see fuzz/README.md and `make fuzz-diff`).
[[bin]]
name = "woxi-diff-fuzz"
path = "src/bin/diff_fuzz.rs"
required-features = ["cli"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["cli"]
cli = [
  "dep:clap",
  "dep:dirs",
  "dep:env_logger",
  "dep:jupyter-protocol",
  "dep:log",
  "dep:runtimelib",
  "dep:rustyline",
  "dep:tokio",
  "dep:uuid",
  "dep:zeromq",
]
wasm = ["dep:wasm-bindgen", "dep:getrandom", "dep:console_error_panic_hook", "dep:js-sys"]
# Compiles in the tests that are excluded from the normal test run: the
# heavy RosettaCode script snapshots (`slow_script_test!`) and the tests
# that query the live wikidata.org API. Without this feature they don't
# exist in the test binaries at all, so `make test` doesn't report them as
# skipped. They run nightly via `make test-slow`.
slow-tests = []

# `pub` items rustc can't see from outside the crate escape the dead_code
# lint; warning on them keeps dead code detectable via plain `cargo check`.
[lints.rust]
unreachable_pub = "warn"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.3", features = ["derive"], optional = true }
dirs = { version = "6.0.0", optional = true }
env_logger = { version = "0.11", optional = true }
getrandom = { version = "0.2", features = ["js"], optional = true }
log = { version = "0.4", optional = true }
jupyter-protocol = { version = "1.2", optional = true }
# The git rev carries a wasm32 word-size overflow fix that is not in any
# crates.io release yet. The version is only used for the published crate
# (cargo strips the git spec), where the bug is irrelevant: the wasm build
# is always made from this repo and keeps the pinned rev.
astro-float = { version = "0.9.5", git = "https://github.com/stencillogic/astro-float", rev = "f92380e025deb8e1743ed93c6d5bf0783ac28717" }
base64 = "0.22"
flate2 = "1.0"
# Pure-Rust OpenType parser (wasm-compatible), used to extract Leland (SMuFL)
# music-glyph outlines as self-contained SVG paths. Matches the version resvg
# already pulls in so no duplicate copy is linked.
ttf-parser = "0.25"
geographiclib-rs = "0.2"
# Pure-Rust math for domain coloring: `atan2`/`pow` from the platform libm
# differ by ULPs between macOS and glibc, which flips 8-bit color rounding
# at .5 boundaries and breaks the SVG snapshots across platforms.
libm = "0.2"
num-bigint = "0.4.6"
num-prime = "0.4"
plotters = { version = "0.3", default-features = false, features = ["svg_backend", "line_series", "area_series"] }
num-traits = "0.2.19"
pest = "2.5"
pest_derive = "2.5"
petgraph = "0.8.3"
rand = "0.8"
runtimelib = { version = "1.3", features = ["tokio-runtime"], optional = true }
rustyline = { version = "15", optional = true }
serde_json = { version = "1.0", features = ["preserve_order"] }
snailquote = "0.3.1"
thiserror = "1.0.63"
tokio = { version = "1.45.0", features = ["full"], optional = true }
uuid = { version = "1.16.0", features = ["v4"], optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
js-sys = { version = "0.3", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
zeromq = { version = "0.5.0-pre", features = ["tokio-runtime"], default-features = false, optional = true }
regex = "1.12.3"
unicode-normalization = "0.1"
# Drop-in replacement for std::time::{Instant, SystemTime} that works on
# wasm32-unknown-unknown (uses Performance.now()/Date.now()) instead of
# panicking. Re-exports std on native targets.
web-time = "1.1"
sha2 = "0.10"
md-5 = "0.10"
sha1 = "0.10"
rand_distr = "0.4"
rand_chacha = "0.3"
stacker = "0.1"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "bmp", "tiff"] }
# Persistent / structurally-shared vector for the Prepend hot path.
# Most lists stay backed by Vec<Expr> (cheap, contiguous slices). Lists
# that hit `push_front` upgrade to imbl::Vector for O(log N) prepends.
imbl = "5"
# LZ4 block decompression for CERN ROOT (.root) file imports. Pure Rust and
# wasm-compatible; `safe-decode` keeps the decoder free of unsafe code since
# the input is untrusted file data.
lz4_flex = { version = "0.11", default-features = false, features = ["std", "safe-decode"] }
# Country / subdivision gazetteer (names, translations, geo coordinates) used
# to resolve geographic Entity[…] specifications to positions.
# `search-translations` is deliberately NOT enabled: its single auto-generated
# ~34k-entry HashMap literal adds ~20s to every clean compile. We rebuild that
# name→country lookup ourselves at runtime from `translations` (see
# `country_name_index` in src/functions/geographics.rs), which is identical.
keshvar = { version = "0.7", features = ["subdivisions", "geo", "translations"] }

# Kept on the same resvg minor as svg2pdf 0.13 and iced 0.14 (woxi-studio),
# so only ONE copy of the resvg/usvg/tiny-skia stack is compiled and linked
# across the workspace. Bump only in lockstep with those two.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies.resvg]
version = "0.45"
default-features = false
features = ["text", "raster-images"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies.svg2pdf]
version = "0.13"
default-features = false
features = ["text"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
libc = "0.2"
calamine = "0.34"
rust_xlsxwriter = { version = "0.94", default-features = false }
# All chrono call sites are `#[cfg(not(target_arch = "wasm32"))]`, not
# cli-gated, so chrono must be available whenever the library itself is
# built for a native target (e.g. the woxi-py Python extension, which
# uses `default-features = false`).
chrono = "0.4"
chrono-tz = "0.10"

[dev-dependencies]
base64 = "0.22"
num-bigint = "0.4.6"
insta = { version = "1", features = ["glob"] }
proptest = "1"
image = { version = "0.25", default-features = false, features = ["png", "gif"] }
criterion = { version = "0.5", default-features = false, features = ["html_reports"] }

[[bench]]
name = "interpreter"
harness = false

# Dev/test builds keep file:line info for panics and backtraces but skip
# local-variable debug info — faster codegen and much faster linking for a
# ~400k-line crate. `split-debuginfo = "unpacked"` additionally skips the
# slow dsymutil packaging step on macOS.
[profile.dev]
opt-level = 1
debug = "line-tables-only"
split-debuginfo = "unpacked"

[profile.release]
codegen-units = 1
lto = true
# Surface integer-overflow bugs as loud panics in shipped builds instead of
# silently wrapping to wrong results. For a CAS, numeric correctness matters
# more than the small runtime cost of the checks (see issue #180).
overflow-checks = true

# Profile for shipping Woxi Studio (see `make install-macos-app`). The GUI
# doesn't need the interpreter's fat-LTO/single-CGU treatment, and applying
# it to the iced/wgpu dependency tree makes release builds take far longer
# than necessary. Thin LTO + parallel codegen builds several times faster
# at near-identical runtime performance.
[profile.studio]
inherits = "release"
lto = "thin"
codegen-units = 16

[patch.crates-io]
astro-float-num = { git = "https://github.com/stencillogic/astro-float", rev = "f92380e025deb8e1743ed93c6d5bf0783ac28717" }
