[build-system]
requires = ["hatchling>=1.5.0", "jupyterlab>=4.0.0,<5", "hatch-jupyter-builder>=0.9.1"]
build-backend = "hatchling.build"

[project]
name = "jupyterlite-woxi-kernel"
version = "0.1.0"
description = "Woxi (Wolfram Language) kernel for JupyterLite"
license = { text = "MIT" }
requires-python = ">=3.8"

[tool.hatch.build.targets.wheel.shared-data]
"jupyterlite_woxi_kernel/labextension" = "share/jupyter/labextensions/@woxi/jupyterlite-woxi-kernel"
"install.json" = "share/jupyter/labextensions/@woxi/jupyterlite-woxi-kernel/install.json"

[tool.hatch.build.hooks.jupyter-builder]
dependencies = ["hatch-jupyter-builder>=0.9.1"]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = ["jupyterlite_woxi_kernel/labextension/static/style.js"]
skip-if-exists = ["jupyterlite_woxi_kernel/labextension/static/style.js"]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
build_cmd = "build:prod"
npm = ["jlpm"]
